# AZ-golf

./: CMakeLists.txt  README.md  main.cpp  matching3.ipynb  run.sh
QtGui/: CMakeLists.txt  QtGui_en_150.ts  ellipseitem.h  main.cpp  main.qml
build-QtGui-Desktop-Debug/: CMakeCache.txt  Makefile  QtGui.cbp  cmake_install.cmake
build-QtGui-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-783c771c86e350259a08.json  cmakeFiles-v1-6fb9ca6af7692f068cb7.json  codemodel-v2-d6752547c8ee5bd4bef7.json  index-2021-03-13T22-09-43-0807.json  target-QtGui-Debug-85aeb4e038f3407b7439.json  target-QtGui_autogen-Debug-d996544d50bb0937654b.json
build-QtGui-Desktop-Debug/QtGui_autogen/EWIEGA46WW/: qrc_qml.cpp
golf/: Edge.py  Line.py  Point.py  __main__.py  data.txt  main.py
include/EBM/: Assignment.h  Constants.h  Graph.h
include/Util/: IRandomGenerator.h
python-golf/: bench.sh  test.txt
python-golf/golf/: Line.py  Point.py  __main__.py  helpers.py
src/EBM/: Assignment.cpp  CMakeLists.txt  Graph.cpp
src/Test/: CMakeLists.txt  EBMtest.cpp
